--- a/src_copy_car_obj_RUN/Fugu.vm
+++ b/src_copy_car_obj_RUN/Fugu.vm
@@ -299,6 +299,55 @@ function Fugu.erase 2
     pop temp 0
     push constant 0
     return
+function Fugu.moveFugu 0
+    push argument 0
+    pop pointer 0
+    push argument 1
+    push constant 1
+    eq
+    not
+    if-goto Fugu_7
+    push pointer 0
+    call Fugu.moveLeft 1
+    pop temp 0
+    goto Fugu_6
+label Fugu_7
+label Fugu_6
+    push argument 1
+    push constant 2
+    eq
+    not
+    if-goto Fugu_9
+    push pointer 0
+    call Fugu.moveUp 1
+    pop temp 0
+    goto Fugu_8
+label Fugu_9
+label Fugu_8
+    push argument 1
+    push constant 3
+    eq
+    not
+    if-goto Fugu_11
+    push pointer 0
+    call Fugu.moveRight 1
+    pop temp 0
+    goto Fugu_10
+label Fugu_11
+label Fugu_10
+    push argument 1
+    push constant 4
+    eq
+    not
+    if-goto Fugu_13
+    push pointer 0
+    call Fugu.moveDown 1
+    pop temp 0
+    goto Fugu_12
+label Fugu_13
+label Fugu_12
+    push constant 0
+    return
 function Fugu.moveUp 0
     push argument 0
     pop pointer 0
@@ -308,7 +357,7 @@ function Fugu.moveUp 0
     sub
     gt
     not
-    if-goto Fugu_7
+    if-goto Fugu_15
     push pointer 0
     push this 1
     push constant 32
@@ -333,9 +382,9 @@ function Fugu.moveUp 0
     add
     call Fugu.draw_LEGACY 2
     pop temp 0
-    goto Fugu_6
-label Fugu_7
-label Fugu_6
+    goto Fugu_14
+label Fugu_15
+label Fugu_14
     push constant 0
     return
 function Fugu.moveDown 0
@@ -351,7 +400,7 @@ function Fugu.moveDown 0
     add
     lt
     not
-    if-goto Fugu_9
+    if-goto Fugu_17
     push pointer 0
     push this 1
     push constant 32
@@ -376,9 +425,9 @@ function Fugu.moveDown 0
     add
     call Fugu.draw_LEGACY 2
     pop temp 0
-    goto Fugu_8
-label Fugu_9
-label Fugu_8
+    goto Fugu_16
+label Fugu_17
+label Fugu_16
     push constant 0
     return
 function Fugu.moveLeft 0
@@ -388,7 +437,7 @@ function Fugu.moveLeft 0
     push constant 0
     gt
     not
-    if-goto Fugu_11
+    if-goto Fugu_19
     push pointer 0
     push this 1
     push constant 32
@@ -413,9 +462,9 @@ function Fugu.moveLeft 0
     add
     call Fugu.draw_LEGACY 2
     pop temp 0
-    goto Fugu_10
-label Fugu_11
-label Fugu_10
+    goto Fugu_18
+label Fugu_19
+label Fugu_18
     push constant 0
     return
 function Fugu.moveRight 0
@@ -425,7 +474,7 @@ function Fugu.moveRight 0
     push constant 31
     lt
     not
-    if-goto Fugu_13
+    if-goto Fugu_21
     push pointer 0
     push this 1
     push constant 32
@@ -450,9 +499,9 @@ function Fugu.moveRight 0
     add
     call Fugu.draw_LEGACY 2
     pop temp 0
-    goto Fugu_12
-label Fugu_13
-label Fugu_12
+    goto Fugu_20
+label Fugu_21
+label Fugu_20
     push constant 0
     return
 function Fugu.draw_LEGACY 1
