--- a/vm/FuguGame.vm
+++ b/vm/FuguGame.vm
@@ -2,6 +2,8 @@ function FuguGame.new 0
     push constant 8
     call Memory.alloc 1
     pop pointer 0
+    call StartsMenu.new 0
+    pop this 7
     push constant 0
     push constant 0
     call Fugu.new 2
@@ -14,6 +16,16 @@ function FuguGame.new 0
     push pointer 0
     call FuguGame.carrots_assemble 1
     pop temp 0
+    push constant 0
+    push constant 0
+    push constant 0
+    call Bubble.new 3
+    pop this 4
+    push constant 0
+    pop this 5
+    push this 3
+    call Array.new 1
+    pop this 6
     push constant 0
     pop this 1
     push pointer 0
@@ -105,7 +117,7 @@ function FuguGame.carrots_assemble 0
     push constant 7
     push this 2
     add
-    push constant 16
+    push constant 15
     push constant 4
     call Carrot.new 2
     pop temp 0
@@ -134,74 +146,166 @@ function FuguGame.carrots_assemble 0
     pop that 0
     push constant 0
     return
-function FuguGame.calc_location 0
+function FuguGame.carrots_destroyed_assemble 0
     push argument 0
     pop pointer 0
-    push argument 1
-    push constant 32
-    call Math.multiply 2
-    push argument 2
+    push constant 0
+    push this 6
     add
+    push constant 0
+    pop temp 0
+    pop pointer 1
+    push temp 0
+    pop that 0
+    push constant 1
+    push this 6
+    add
+    push constant 0
+    pop temp 0
+    pop pointer 1
+    push temp 0
+    pop that 0
+    push constant 2
+    push this 6
+    add
+    push constant 0
+    pop temp 0
+    pop pointer 1
+    push temp 0
+    pop that 0
+    push constant 3
+    push this 6
+    add
+    push constant 0
+    pop temp 0
+    pop pointer 1
+    push temp 0
+    pop that 0
+    push constant 4
+    push this 6
+    add
+    push constant 0
+    pop temp 0
+    pop pointer 1
+    push temp 0
+    pop that 0
+    push constant 5
+    push this 6
+    add
+    push constant 0
+    pop temp 0
+    pop pointer 1
+    push temp 0
+    pop that 0
+    push constant 6
+    push this 6
+    add
+    push constant 0
+    pop temp 0
+    pop pointer 1
+    push temp 0
+    pop that 0
+    push constant 7
+    push this 6
+    add
+    push constant 0
+    pop temp 0
+    pop pointer 1
+    push temp 0
+    pop that 0
+    push constant 8
+    push this 6
+    add
+    push constant 0
+    pop temp 0
+    pop pointer 1
+    push temp 0
+    pop that 0
+    push constant 9
+    push this 6
+    add
+    push constant 0
+    pop temp 0
+    pop pointer 1
+    push temp 0
+    pop that 0
+    push constant 0
     return
-function FuguGame.moveFugu 0
+function FuguGame.moveCarrots 1
     push argument 0
     pop pointer 0
-    push this 1
-    push constant 1
-    eq
+    push constant 0
+    pop local 0
+label FuguGame_0
+    push local 0
+    push argument 1
+    lt
     not
     if-goto FuguGame_1
-    push this 0
-    call Fugu.moveLeft 1
-    pop temp 0
-    goto FuguGame_0
-label FuguGame_1
-label FuguGame_0
-    push this 1
-    push constant 2
-    eq
+    push local 0
+    push this 6
+    add
+    pop pointer 1
+    push that 0
+    not
     not
     if-goto FuguGame_3
-    push this 0
-    call Fugu.moveUp 1
+    push pointer 0
+    push local 0
+    push this 2
+    add
+    pop pointer 1
+    push that 0
+    push argument 2
+    push argument 3
+    call FuguGame.moveCarrot 4
     pop temp 0
     goto FuguGame_2
 label FuguGame_3
 label FuguGame_2
-    push this 1
-    push constant 3
-    eq
-    not
-    if-goto FuguGame_5
-    push this 0
-    call Fugu.moveRight 1
+    push local 0
+    push constant 1
+    add
+    pop local 0
+    goto FuguGame_0
+label FuguGame_1
+    push constant 0
+    return
+function FuguGame.moveCarrot 0
+    push argument 0
+    pop pointer 0
+    push argument 1
+    call Carrot.erase 1
     pop temp 0
-    goto FuguGame_4
-label FuguGame_5
-label FuguGame_4
-    push this 1
-    push constant 4
-    eq
-    not
-    if-goto FuguGame_7
-    push this 0
-    call Fugu.moveDown 1
+    push argument 1
+    push argument 2
+    push argument 3
+    call Carrot.setNextPointPosFolowwingFugu 3
     pop temp 0
-    goto FuguGame_6
-label FuguGame_7
-label FuguGame_6
+    push argument 1
+    call Carrot.draw 1
+    pop temp 0
+    push constant 50
+    call Sys.wait 1
+    pop temp 0
     push constant 0
     return
 function FuguGame.run 13
     push argument 0
     pop pointer 0
+    push this 7
+    call StartsMenu.show 1
+    pop temp 0
+    push this 0
+    call Fugu.draw 1
+    pop temp 0
     push constant 0
-    pop local 3
+    pop local 1
     push constant 0
-    pop local 5
+    pop local 2
     push constant 0
-    pop local 12
-    push constant 14
+    pop local 7
+    push constant 13
     call String.new 1
     push constant 89
     call String.appendChar 2
@@ -219,8 +323,6 @@ function FuguGame.run 13
     call String.appendChar 2
     push constant 101
     call String.appendChar 2
-    push constant 114
-    call String.appendChar 2
     push constant 32
     call String.appendChar 2
     push constant 58
@@ -231,127 +333,212 @@ function FuguGame.run 13
     call String.appendChar 2
     push constant 41
     call String.appendChar 2
-    pop local 6
-    push constant 3
-    pop local 7
+    pop local 3
+    push constant 1
+    pop local 12
+    push this 0
+    call Fugu.draw 1
+    pop temp 0
+    push constant 0
+    pop local 8
+    push constant 0
+    pop local 9
     push constant 1
     neg
-    pop local 8
-label FuguGame_8
-    push local 3
+    pop local 10
+label FuguGame_4
+    push local 1
     not
     not
-    if-goto FuguGame_9
+    if-goto FuguGame_5
     push constant 1
-    pop local 2
-label FuguGame_10
-    push local 2
+    pop local 0
+label FuguGame_6
+    push local 0
     push constant 0
     eq
-    push local 3
+    push local 1
     push constant 1
     neg
     eq
     or
-    push local 5
+    push local 2
     push constant 1
     neg
     eq
     or
     not
     not
-    if-goto FuguGame_11
+    if-goto FuguGame_7
     call Keyboard.keyPressed 0
-    pop local 2
-    push constant 30
+    pop local 0
+    push constant 20
     call Sys.wait 1
     pop temp 0
-    push local 2
+    push local 0
     push constant 81
     eq
     not
-    if-goto FuguGame_13
+    if-goto FuguGame_9
     push constant 1
     neg
-    pop local 3
-    goto FuguGame_12
-label FuguGame_13
-label FuguGame_12
-    push local 2
+    pop local 1
+    goto FuguGame_8
+label FuguGame_9
+label FuguGame_8
+    push local 0
     push constant 67
     eq
-    push local 12
+    push local 7
     push this 3
     lt
     and
     not
-    if-goto FuguGame_15
-    push local 12
+    if-goto FuguGame_11
+    push local 7
     push constant 1
     add
-    pop local 12
-    push local 12
+    pop local 7
+    push local 7
     push constant 1
     sub
     push this 2
     add
     pop pointer 1
     push that 0
-    pop local 11
-    push local 11
+    pop local 6
+    push local 6
     call Carrot.draw 1
     pop temp 0
     push constant 100
     call Sys.wait 1
     pop temp 0
-    goto FuguGame_14
-label FuguGame_15
-label FuguGame_14
-    push local 2
+    goto FuguGame_10
+label FuguGame_11
+label FuguGame_10
+    push local 0
     push constant 130
     eq
-    push local 2
+    push local 0
     push constant 131
     eq
     or
-    push local 2
+    push local 0
     push constant 132
     eq
     or
-    push local 2
+    push local 0
     push constant 133
     eq
     or
     not
-    if-goto FuguGame_17
-    push local 2
+    if-goto FuguGame_13
+    push local 0
     push constant 129
     sub
     pop this 1
-    push pointer 0
-    call FuguGame.moveFugu 1
+    push this 0
+    push this 1
+    call Fugu.moveFugu 2
     pop temp 0
+    push this 0
+    call Fugu.getX 1
+    pop local 8
+    push this 0
+    call Fugu.getY 1
+    pop local 9
     push pointer 0
-    push local 12
     push local 7
-    call FuguGame.moveCarrots 3
+    push local 8
+    push local 9
+    call FuguGame.moveCarrots 4
     pop temp 0
-    push local 7
+    goto FuguGame_12
+label FuguGame_13
+label FuguGame_12
+    push local 0
+    push constant 32
+    eq
+    push this 5
+    not
+    and
+    not
+    if-goto FuguGame_15
+    push this 0
+    call Fugu.getX 1
+    push this 0
+    call Fugu.getY 1
+    push this 1
+    call Bubble.new 3
+    pop this 4
+    push constant 1
     neg
-    pop local 7
+    pop this 5
+    push pointer 0
+    push local 7
+    push local 8
+    push local 9
+    call FuguGame.moveCarrots 4
+    pop temp 0
+    goto FuguGame_14
+label FuguGame_15
+label FuguGame_14
+    push this 5
+    not
+    if-goto FuguGame_17
+    push this 4
+    call Bubble.update 1
+    pop this 5
+    push pointer 0
+    push local 7
+    call FuguGame.IsBubbleCollidedWithCarrotMultiple_getDestroyedIndex 2
+    pop local 10
+    push local 10
+    push constant 1
+    neg
+    eq
+    not
+    not
+    if-goto FuguGame_19
+    push local 10
+    push this 2
+    add
+    pop pointer 1
+    push that 0
+    pop local 6
+    push local 6
+    call Carrot.erase 1
+    pop temp 0
+    push local 6
+    call Carrot.dispose 1
+    pop temp 0
+    push local 10
+    push this 6
+    add
+    push constant 1
+    neg
+    pop temp 0
+    pop pointer 1
+    push temp 0
+    pop that 0
+    push constant 0
+    pop this 5
+    goto FuguGame_18
+label FuguGame_19
+label FuguGame_18
     goto FuguGame_16
 label FuguGame_17
 label FuguGame_16
     push pointer 0
-    push local 12
-    call FuguGame.IsCollided_LEGACY_Multiple 2
-    pop local 5
-    goto FuguGame_10
-label FuguGame_11
-label FuguGame_18
-    push local 5
+    push local 7
+    call FuguGame.IsFuguCollidedWithCarrotMultiple 2
+    pop local 2
+    goto FuguGame_6
+label FuguGame_7
+label FuguGame_20
+    push local 2
     not
-    if-goto FuguGame_19
+    if-goto FuguGame_21
     push this 0
     call Fugu.erase 1
     pop temp 0
@@ -359,25 +546,25 @@ label FuguGame_18
     push constant 4
     call Output.moveCursor 2
     pop temp 0
-    push local 6
+    push local 3
     call Output.printString 1
     pop temp 0
-    push local 6
+    push local 3
     call String.dispose 1
     pop temp 0
     call Keyboard.keyPressed 0
-    pop local 2
-    push local 2
+    pop local 0
+    push local 0
     push constant 53
     eq
     not
-    if-goto FuguGame_21
+    if-goto FuguGame_23
     push constant 0
-    pop local 5
+    pop local 2
     call Screen.clearScreen 0
     pop temp 0
     push constant 0
-    pop local 12
+    pop local 7
     push this 0
     push constant 0
     push constant 0
@@ -386,16 +573,134 @@ label FuguGame_18
     push this 0
     call Fugu.draw 1
     pop temp 0
+    push this 5
+    not
+    if-goto FuguGame_25
+    push this 4
+    call Bubble.dispose 1
+    pop temp 0
+    push constant 0
+    pop this 5
+    goto FuguGame_24
+label FuguGame_25
+label FuguGame_24
+    push pointer 0
+    call FuguGame.RestoreCarrots 1
+    pop temp 0
+    goto FuguGame_22
+label FuguGame_23
+label FuguGame_22
     goto FuguGame_20
 label FuguGame_21
-label FuguGame_20
-    goto FuguGame_18
-label FuguGame_19
-    goto FuguGame_8
-label FuguGame_9
+    goto FuguGame_4
+label FuguGame_5
     push constant 0
     return
-function FuguGame.IsCollided_LEGACY 6
+function FuguGame.RestoreCarrots 2
+    push argument 0
+    pop pointer 0
+    push constant 0
+    pop local 0
+label FuguGame_26
+    push local 0
+    push this 3
+    lt
+    not
+    if-goto FuguGame_27
+    push local 0
+    push this 6
+    add
+    pop pointer 1
+    push that 0
+    not
+    not
+    if-goto FuguGame_29
+    push local 0
+    push this 2
+    add
+    pop pointer 1
+    push that 0
+    pop local 1
+    push local 1
+    call Carrot.erase 1
+    pop temp 0
+    push local 1
+    call Carrot.dispose 1
+    pop temp 0
+    goto FuguGame_28
+label FuguGame_29
+label FuguGame_28
+    push local 0
+    push constant 1
+    add
+    pop local 0
+    goto FuguGame_26
+label FuguGame_27
+    push pointer 0
+    call FuguGame.carrots_assemble 1
+    pop temp 0
+    push constant 0
+    return
+function FuguGame.IsBubbleCollidedWithCarrotMultiple_getDestroyedIndex 3
+    push argument 0
+    pop pointer 0
+    push constant 0
+    pop local 0
+label FuguGame_30
+    push local 0
+    push argument 1
+    lt
+    not
+    if-goto FuguGame_31
+    push local 0
+    push this 2
+    add
+    pop pointer 1
+    push that 0
+    pop local 1
+    push pointer 0
+    push local 1
+    call FuguGame.IsBubbleCollidedWithCarrot 2
+    not
+    if-goto FuguGame_33
+    push local 0
+    return
+    goto FuguGame_32
+label FuguGame_33
+label FuguGame_32
+    push local 0
+    push constant 1
+    add
+    pop local 0
+    goto FuguGame_30
+label FuguGame_31
+    push constant 1
+    neg
+    return
+function FuguGame.IsBubbleCollidedWithCarrot 5
+    push argument 0
+    pop pointer 0
+    push argument 1
+    call Carrot.getX 1
+    pop local 0
+    push argument 1
+    call Carrot.getY 1
+    pop local 1
+    push this 4
+    call Bubble.getX 1
+    pop local 3
+    push this 4
+    call Bubble.getY 1
+    pop local 4
+    push local 0
+    push local 3
+    eq
+    push local 1
+    push local 4
+    eq
+    and
+    return
+function FuguGame.IsFuguCollidedWithCarrot 4
     push argument 0
     pop pointer 0
     push argument 1
@@ -406,65 +711,39 @@ function FuguGame.IsCollided_LEGACY 6
     pop local 1
     push this 0
     call Fugu.getX 1
-    pop local 3
-    push this 0
-    call Fugu.getY 1
-    pop local 4
-    push argument 1
-    call Carrot.getHeight 1
     pop local 2
     push this 0
-    call Fugu.getHeight 1
-    pop local 5
+    call Fugu.getY 1
+    pop local 3
     push local 0
-    push local 3
+    push local 2
     eq
     push local 1
-    push constant 1
-    sub
-    push local 4
-    push local 5
-    add
-    push constant 1
-    sub
-    lt
-    push local 4
-    push local 5
-    add
-    push constant 1
-    sub
-    push local 1
-    push local 2
-    add
-    lt
-    push local 1
-    push local 2
-    add
-    push local 4
-    gt
-    push local 4
-    push local 1
-    push constant 1
-    sub
-    gt
-    and
-    or
-    and
+    push local 3
+    eq
     and
     return
-function FuguGame.IsCollided_LEGACY_Multiple 2
+function FuguGame.IsFuguCollidedWithCarrotMultiple 2
     push argument 0
     pop pointer 0
     push constant 0
     pop local 0
     push constant 0
     pop local 1
-label FuguGame_22
+label FuguGame_34
     push local 0
     push argument 1
     lt
     not
-    if-goto FuguGame_23
+    if-goto FuguGame_35
+    push local 0
+    push this 6
+    add
+    pop pointer 1
+    push that 0
+    not
+    not
+    if-goto FuguGame_37
     push local 1
     push pointer 0
     push local 0
@@ -472,92 +751,17 @@ label FuguGame_22
     add
     pop pointer 1
     push that 0
-    call FuguGame.IsCollided_LEGACY 2
+    call FuguGame.IsFuguCollidedWithCarrot 2
     or
     pop local 1
+    goto FuguGame_36
+label FuguGame_37
+label FuguGame_36
     push local 0
     push constant 1
     add
     pop local 0
-    goto FuguGame_22
-label FuguGame_23
+    goto FuguGame_34
+label FuguGame_35
     push local 1
-    return
-function FuguGame.IsCollided 0
-    push argument 0
-    pop pointer 0
-    push argument 4
-    push argument 1
-    eq
-    push argument 5
-    push constant 1
-    sub
-    push argument 2
-    push argument 3
-    add
-    push constant 1
-    sub
-    lt
-    push argument 2
-    push argument 3
-    add
-    push constant 1
-    sub
-    push argument 5
-    push argument 6
-    add
-    lt
-    push argument 5
-    push argument 6
-    add
-    push argument 2
-    gt
-    push argument 2
-    push argument 5
-    push constant 1
-    sub
-    gt
-    and
-    or
-    and
-    and
-    return
-function FuguGame.moveCarrots 1
-    push argument 0
-    pop pointer 0
-    push constant 0
-    pop local 0
-label FuguGame_24
-    push local 0
-    push argument 1
-    lt
-    not
-    if-goto FuguGame_25
-    push local 0
-    push constant 1
-    add
-    pop local 0
-    goto FuguGame_24
-label FuguGame_25
-    push constant 0
-    return
-function FuguGame.moveCarrot 0
-    push argument 0
-    pop pointer 0
-    push argument 1
-    call Carrot.erase 1
-    pop temp 0
-    push argument 1
-    push argument 1
-    call Carrot.getY 1
-    push argument 2
-    add
-    push argument 1
-    call Carrot.getX 1
-    call Carrot.set_YX 3
-    pop temp 0
-    push argument 1
-    call Carrot.draw 1
-    pop temp 0
-    push constant 0
     return
