--- a/vm/Carrot.vm
+++ b/vm/Carrot.vm
@@ -6,10 +6,6 @@ function Carrot.new 0
     pop this 0
     push argument 0
     pop this 1
-    push constant 9
-    pop this 2
-    push constant 16
-    pop this 3
     push pointer 0
     return
 function Carrot.dispose 0
@@ -37,9 +33,7 @@ function Carrot.get_location 0
     gt
     and
     push argument 1
-    push this 3
-    add
-    push constant 256
+    push constant 16
     lt
     and
     not
@@ -95,9 +89,7 @@ label Carrot_2
     neg
     gt
     push argument 1
-    push this 3
-    add
-    push constant 256
+    push constant 16
     lt
     and
     not
@@ -234,209 +226,97 @@ function Carrot.erase 3
     push local 0
     push constant 0
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
     push constant 0
-    add
-    push local 1
-    push constant 2336
-    sub
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 32
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
-    push constant 32
-    add
-    push local 1
-    push constant 3424
-    sub
+    push constant 0
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 64
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
-    push constant 64
-    add
-    push local 1
-    push constant 1984
-    sub
+    push constant 0
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 96
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
-    push constant 96
-    add
-    push local 1
-    push constant 896
-    sub
+    push constant 0
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 128
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
-    push constant 128
-    add
-    push local 1
-    push constant 1984
-    sub
+    push constant 0
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 160
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
-    push constant 160
-    add
-    push local 1
-    push constant 2080
-    sub
+    push constant 0
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 192
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
-    push constant 192
-    add
-    push local 1
-    push constant 5648
-    sub
+    push constant 0
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 224
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
-    push constant 224
-    add
-    push local 1
-    push constant 4208
-    sub
+    push constant 0
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 256
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
-    push constant 256
-    add
-    push local 1
-    push constant 5904
-    sub
+    push constant 0
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 288
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
-    push constant 288
-    add
-    push local 1
-    push constant 2080
-    sub
+    push constant 0
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 320
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
-    push constant 320
-    add
-    push local 1
-    push constant 2272
-    sub
+    push constant 0
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 352
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
-    push constant 352
-    add
-    push local 1
-    push constant 1600
-    sub
+    push constant 0
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 384
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
-    push constant 384
-    add
-    push local 1
-    push constant 1088
-    sub
+    push constant 0
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 416
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
-    push constant 416
-    add
-    push local 1
-    push constant 640
-    sub
+    push constant 0
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 448
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
-    push constant 448
-    add
-    push local 1
-    push constant 896
-    sub
+    push constant 0
     call Memory.poke 2
     pop temp 0
     push local 0
     push constant 480
     add
-    call Memory.peek 1
-    pop local 1
-    push local 0
-    push constant 480
-    add
-    push local 1
-    push constant 256
-    sub
+    push constant 0
     call Memory.poke 2
     pop temp 0
     push constant 0
@@ -760,6 +640,175 @@ function Carrot.draw_LEGACY 1
     add
     push constant 256
     call Memory.poke 2
+    pop temp 0
+    push constant 0
+    return
+function Carrot.setNextPointPosFolowwingFugu 14
+    push argument 0
+    pop pointer 0
+    push this 0
+    pop local 0
+    push this 1
+    pop local 1
+    push local 0
+    push argument 1
+    eq
+    push local 1
+    push argument 2
+    eq
+    and
+    not
+    if-goto Carrot_7
+    push local 0
+    pop local 12
+    push local 1
+    pop local 13
+    push constant 0
+    return
+    goto Carrot_6
+label Carrot_7
+label Carrot_6
+    push argument 1
+    push local 0
+    sub
+    pop local 2
+    push argument 2
+    push local 1
+    sub
+    pop local 3
+    push local 2
+    push constant 0
+    gt
+    not
+    if-goto Carrot_9
+    push constant 1
+    pop local 4
+    goto Carrot_8
+label Carrot_9
+    push local 2
+    push constant 0
+    lt
+    not
+    if-goto Carrot_11
+    push constant 1
+    neg
+    pop local 4
+    goto Carrot_10
+label Carrot_11
+    push constant 0
+    pop local 4
+label Carrot_10
+label Carrot_8
+    push local 3
+    push constant 0
+    gt
+    not
+    if-goto Carrot_13
+    push constant 1
+    pop local 5
+    goto Carrot_12
+label Carrot_13
+    push local 3
+    push constant 0
+    lt
+    not
+    if-goto Carrot_15
+    push constant 1
+    neg
+    pop local 5
+    goto Carrot_14
+label Carrot_15
+    push constant 0
+    pop local 5
+label Carrot_14
+label Carrot_12
+    push local 2
+    call Math.abs 1
+    pop local 6
+    push local 3
+    call Math.abs 1
+    pop local 7
+    push local 6
+    push local 7
+    gt
+    not
+    if-goto Carrot_17
+    push constant 1
+    neg
+    pop local 8
+    goto Carrot_16
+label Carrot_17
+    push constant 0
+    pop local 8
+label Carrot_16
+    push local 8
+    not
+    if-goto Carrot_19
+    push constant 2
+    push local 7
+    call Math.multiply 2
+    push local 6
+    sub
+    pop local 9
+    push local 0
+    push local 4
+    add
+    pop local 10
+    push local 1
+    pop local 11
+    push local 9
+    push constant 1
+    neg
+    gt
+    not
+    if-goto Carrot_21
+    push local 1
+    push local 5
+    add
+    pop local 11
+    goto Carrot_20
+label Carrot_21
+label Carrot_20
+    push local 10
+    pop local 12
+    push local 11
+    pop local 13
+    goto Carrot_18
+label Carrot_19
+    push constant 2
+    push local 6
+    call Math.multiply 2
+    push local 7
+    sub
+    pop local 9
+    push local 1
+    push local 5
+    add
+    pop local 11
+    push local 0
+    pop local 10
+    push local 9
+    push constant 1
+    neg
+    gt
+    not
+    if-goto Carrot_23
+    push local 0
+    push local 4
+    add
+    pop local 10
+    goto Carrot_22
+label Carrot_23
+label Carrot_22
+    push local 10
+    pop local 12
+    push local 11
+    pop local 13
+label Carrot_18
+    push pointer 0
+    push local 13
+    push local 12
+    call Carrot.set_YX 3
     pop temp 0
     push constant 0
     return
