--- a/vm/Fugu.vm
+++ b/vm/Fugu.vm
@@ -10,14 +10,10 @@ function Fugu.new 0
     pop this 2
     push constant 13
     pop this 3
-    push constant 16
+    push constant 1
     pop this 4
     push constant 1
     pop this 5
-    push pointer 0
-    push constant 0
-    call Fugu.draw_LEGACY 2
-    pop temp 0
     push pointer 0
     return
 function Fugu.dispose 0
@@ -60,15 +56,17 @@ function Fugu.get_location 0
     gt
     and
     push argument 1
-    push this 3
+    push constant 1
     add
-    push constant 256
+    push constant 16
     lt
     and
     not
     if-goto Fugu_1
     push argument 1
     push constant 32
+    call Math.multiply 2
+    push constant 16
     call Math.multiply 2
     push argument 2
     add
@@ -101,9 +99,9 @@ label Fugu_2
     neg
     gt
     push argument 1
-    push this 3
+    push constant 1
     add
-    push constant 256
+    push constant 16
     lt
     and
     not
@@ -301,6 +299,55 @@ function Fugu.erase 2
     pop temp 0
     push constant 0
     return
+function Fugu.moveFugu 0
+    push argument 0
+    pop pointer 0
+    push argument 1
+    push constant 1
+    eq
+    not
+    if-goto Fugu_7
+    push pointer 0
+    call Fugu.moveLeft 1
+    pop temp 0
+    goto Fugu_6
+label Fugu_7
+label Fugu_6
+    push argument 1
+    push constant 2
+    eq
+    not
+    if-goto Fugu_9
+    push pointer 0
+    call Fugu.moveUp 1
+    pop temp 0
+    goto Fugu_8
+label Fugu_9
+label Fugu_8
+    push argument 1
+    push constant 3
+    eq
+    not
+    if-goto Fugu_11
+    push pointer 0
+    call Fugu.moveRight 1
+    pop temp 0
+    goto Fugu_10
+label Fugu_11
+label Fugu_10
+    push argument 1
+    push constant 4
+    eq
+    not
+    if-goto Fugu_13
+    push pointer 0
+    call Fugu.moveDown 1
+    pop temp 0
+    goto Fugu_12
+label Fugu_13
+label Fugu_12
+    push constant 0
+    return
 function Fugu.moveUp 0
     push argument 0
     pop pointer 0
@@ -310,10 +357,12 @@ function Fugu.moveUp 0
     sub
     gt
     not
-    if-goto Fugu_7
+    if-goto Fugu_15
     push pointer 0
     push this 1
     push constant 32
+    call Math.multiply 2
+    push constant 16
     call Math.multiply 2
     push this 0
     add
@@ -327,32 +376,36 @@ function Fugu.moveUp 0
     push this 1
     push constant 32
     call Math.multiply 2
+    push constant 16
+    call Math.multiply 2
     push this 0
     add
     call Fugu.draw_LEGACY 2
     pop temp 0
-    goto Fugu_6
-label Fugu_7
-label Fugu_6
+    goto Fugu_14
+label Fugu_15
+label Fugu_14
     push constant 0
     return
 function Fugu.moveDown 0
     push argument 0
     pop pointer 0
     push this 1
-    push this 3
+    push constant 1
     add
-    push constant 256
+    push constant 16
     push this 4
     sub
     push constant 1
     add
     lt
     not
-    if-goto Fugu_9
+    if-goto Fugu_17
     push pointer 0
     push this 1
     push constant 32
+    call Math.multiply 2
+    push constant 16
     call Math.multiply 2
     push this 0
     add
@@ -366,13 +419,15 @@ function Fugu.moveDown 0
     push this 1
     push constant 32
     call Math.multiply 2
+    push constant 16
+    call Math.multiply 2
     push this 0
     add
     call Fugu.draw_LEGACY 2
     pop temp 0
-    goto Fugu_8
-label Fugu_9
-label Fugu_8
+    goto Fugu_16
+label Fugu_17
+label Fugu_16
     push constant 0
     return
 function Fugu.moveLeft 0
@@ -382,30 +437,34 @@ function Fugu.moveLeft 0
     push constant 0
     gt
     not
-    if-goto Fugu_11
+    if-goto Fugu_19
     push pointer 0
     push this 1
     push constant 32
+    call Math.multiply 2
+    push constant 16
     call Math.multiply 2
     push this 0
     add
     call Fugu.erase_LEGACY 2
     pop temp 0
     push this 0
-    push constant 1
+    push this 5
     sub
     pop this 0
     push pointer 0
     push this 1
     push constant 32
     call Math.multiply 2
+    push constant 16
+    call Math.multiply 2
     push this 0
     add
     call Fugu.draw_LEGACY 2
     pop temp 0
-    goto Fugu_10
-label Fugu_11
-label Fugu_10
+    goto Fugu_18
+label Fugu_19
+label Fugu_18
     push constant 0
     return
 function Fugu.moveRight 0
@@ -415,30 +474,34 @@ function Fugu.moveRight 0
     push constant 31
     lt
     not
-    if-goto Fugu_13
+    if-goto Fugu_21
     push pointer 0
     push this 1
     push constant 32
+    call Math.multiply 2
+    push constant 16
     call Math.multiply 2
     push this 0
     add
     call Fugu.erase_LEGACY 2
     pop temp 0
     push this 0
-    push constant 1
+    push this 5
     add
     pop this 0
     push pointer 0
     push this 1
     push constant 32
     call Math.multiply 2
+    push constant 16
+    call Math.multiply 2
     push this 0
     add
     call Fugu.draw_LEGACY 2
     pop temp 0
-    goto Fugu_12
-label Fugu_13
-label Fugu_12
+    goto Fugu_20
+label Fugu_21
+label Fugu_20
     push constant 0
     return
 function Fugu.draw_LEGACY 1
